--- a/tz13_bigdata_root/tz13_bigdata_common/pom.xml
+++ b/tz13_bigdata_root/tz13_bigdata_common/pom.xml
@@ -18,6 +18,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <org.slf4j.version>1.7.5</org.slf4j.version>
+        <fastjson.version>1.2.5</fastjson.version>
     </properties>
 
     <dependencies>
@@ -40,6 +41,12 @@
             <version>${org.slf4j.version}</version>
         </dependency>
 
+        <!--alibaba json解析包-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
